# TSPN-SoCG-2026

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  conanfile.txt  pyproject.toml  setup.py
cmake/: CCache.cmake
cmake/conan/gurobi_public/: CMakeLists.txt  README.md  conandata.yml  conanfile.py
cmake/conan/gurobi_public/test_package/: conanfile.py
evaluation/: README.md
evaluation/00_simplification/: 01_run_simplification.py  02_look_at_solutions.ipynb  03_extract_simplified_instances.py
evaluation/02_root_node_selection/: dk_extract.py
evaluation/02a_decomposition/: dk_extract.py
evaluation/03_search_strategy/: dk_extract.py
evaluation/04_node_simplification/: dk_extract.py
evaluation/instances/: 01_analyze_instances.ipynb  02_compare_instance_sets.ipynb  03_count_holes.ipynb  preprocessing_stats.ipynb
evaluation/rq1_root_node_selection/: 01_run_solver.py  02_look_at_solutions.ipynb  02_run_non_simplified.py
evaluation/rq2_search_strategy/: 01_run_solver.py  02_look_at_solutions.ipynb
evaluation/rq3_decomposition_branching/: 01_run_solver.py  02_look_at_solutions.ipynb
evaluation/rq4_scalability/: 01_run_solver.py  02_look_at_solutions.ipynb
evaluation/rq4_scalability/long_runs/: 01_run_solver.py  02_look_at_solutions.ipynb
evaluation/rq5_state_of_the_art/: 01_run_solver.py  02_look_at_solutions.ipynb
evaluation/visualization/: branching.ipynb  decomposition_branching.ipynb  root_node_strategies.ipynb  tspn_visualization.ipynb
examples/: 00_simple.py  04_annotated_solution.py  05_order_pruning.py  06_lazy_constraints.py
examples/_utils/: __init__.py
include/tspn/: bnb.h  callbacks.h  common.h  node.h  relaxed_solution.h  soc.h
include/tspn/details/: cgal_conversion.h  cgal_operations.h  convex_decomposition.h  convex_partition.h  distance_cache.h  lazy_trajectory.h  pre_simplify.h  solution_pool.h  tangents.h
include/tspn/sampling/: dp.h  voronoi.h
include/tspn/strategies/: branching_strategy.h  order_filtering.h  root_node_strategy.h  rule.h  search_strategy.h
include/tspn/utils/: distance.h  drawer.h  geometry.h  timer.h
pyexamples/: 01_mip.py  02_mip_nonconvex.py  03_warm_start_visualization.py  05_order_pruning.py
pysrc/: CMakeLists.txt
pysrc/tspn_bnb2/: __init__.py  schemas.py
pysrc/tspn_bnb2/core/: _tspn_bindings.cpp
pysrc/tspn_bnb2/mip/: nonconvex_solver.py  solver.py  utils.py  warm_start.py
pysrc/tspn_bnb2/misc/: __init__.py  io.py  plotting.py
python/: CMakeLists.txt
python/tspn_bnb2/: __init__.py  operations.py  order_annotation.py
python/tspn_bnb2/core/: __init__.py  _tspn_bindings.cpp
python/tspn_bnb2/mip/: __init__.py  callback.py
python/tspn_bnb2/misc/: __init__.py  io.py  paper_style.py  plotting.py
src/: CMakeLists.txt  common.cpp  node.cpp  relaxed_solution.cpp  soc.cpp
src/branching_strategies/: branching_strategy.cpp
src/details/: cgal_conversion.cpp  cgal_operations.cpp  convex_decomposition.cpp  convex_partition.cpp  lazy_trajectory.cpp  pre_simplify.cpp
src/root_node_strategies/: triple_node_strategies.cpp
src/strategies/: order_filtering.cpp
src/utils/: drawer.cpp  geometry.cpp
tests/: CMakeLists.txt  doctest.cpp  lazy_callback_tests.h  order_filtering_tests.h  order_root_tests.h  test_annotated_instance.py  test_annotated_solution.py  test_optimal_solutions.py  test_pre_simplify.py  test_tours.py  test_version.py
tests/cpp/: CMakeLists.txt  test_bnb.cpp  test_branching_strategy.cpp  test_callbacks.cpp  test_common.cpp  test_convex_partition.cpp  test_distance.cpp  test_geometry.cpp  test_geometry_utils.cpp  test_instance.cpp  test_lazy_callback.cpp  test_node.cpp  test_order_filtering.cpp  test_order_root.cpp  test_parameters.cpp  test_polygon.cpp  test_pre_simplify.cpp  test_relaxed_solution.cpp  test_root_node_strategy.cpp  test_search_strategy.cpp  test_soc.cpp  test_solution_pool.cpp  test_trajectory.cpp  test_wkt_parsing.cpp
tests/instances/: att48.json  euro-night-00000050.json  lagos_n005_seed3149.json  optimal_solutions.json.xz
tests/python/: test_mip.py  test_optimal_solutions.py  test_order_annotation_pipeline.py  test_paths.py  test_root_pair_strategies.py  test_tours.py  test_version.py  test_wkt.py
tspn_core/: CMakeLists.txt  bnb.h  callbacks.h  common.cpp  common.h  node.cpp  node.h  relaxed_solution.cpp  relaxed_solution.h  soc.cpp  soc.h  types.h
tspn_core/details/: cgal_conversion.cpp  cgal_conversion.h  cgal_operations.cpp  cgal_operations.h  convex_decomposition.cpp  convex_decomposition.h  convex_partition.cpp  convex_partition.h  distance_cache.h  lazy_trajectory.cpp  lazy_trajectory.h  pre_simplify.cpp  pre_simplify.h  solution_pool.h
tspn_core/strategies/: branching_strategy.cpp  branching_strategy.h  order_filtering.cpp  order_filtering.h  root_node_strategy.cpp  root_node_strategy.h  rule.h  search_strategy.h
tspn_core/utils/: distance.h  drawer.cpp  drawer.h  geometry.cpp  geometry.h
